updated css file

--- a/style.css
+++ b/style.css
@@ -24,6 +24,20 @@
     background-color:#17a2b8;
     border-color:#17a2b8
 }
+.btn-lg{
+    padding:10px 20px;
+    font-size:22px;
+    line-height:1.5;
+    border-radius:5px;
+}
+.btn-primary{
+    color:#fff;
+    background-color:#007bff;
+    border-color:#007bff
+}
+.m-2{
+    margin:4px;
+}
 @media (min-width:576px){
     .container{
         max-width:540px
