--- a/style.css
+++ b/style.css
@@ -15,14 +15,14 @@
     display:inline-block;
     text-align:center;
     padding:5px 12px;
-    font-size:1rem;
+    font-size:20px;
     line-height:2;
     border-radius:5px;
 }
 .btn-info{
-    color:#fff;
-    background-color:#17a2b8;
-    border-color:#17a2b8
+    color:white;
+    background-color:blue;
+    border-color:blue;
 }
 .btn-lg{
     padding:10px 20px;
@@ -31,9 +31,9 @@
     border-radius:5px;
 }
 .btn-primary{
-    color:#fff;
-    background-color:#007bff;
-    border-color:#007bff
+    color:white;
+    background-color:red;
+    border-color:red;
 }
 .m-2{
     margin:4px;
