--- a/style.css
+++ b/style.css
@@ -3,13 +3,19 @@
     padding-right:15px;
     padding-left:15px;
     margin-right:auto;
-    margin-left:auto
+    margin-left:auto;
+}
+#h1{
+    font-size: 32px;
 }
 .text-center{
     text-align:center;
+    font-size: 20px;
 }
 .float-right{
     float:right;
+    font-size: 20px;
+    color: red;
 }
 .btn{
     display:inline-block;
@@ -21,22 +27,29 @@
 }
 .btn-info{
     color:white;
-    background-color:blue;
-    border-color:blue;
+    background-color:orangered;
+    border-color:orangered;
 }
 .btn-lg{
     padding:10px 20px;
     font-size:22px;
-    line-height:1.5;
+    line-height:1;
     border-radius:5px;
 }
 .btn-primary{
     color:white;
-    background-color:red;
-    border-color:red;
+    background-color: rebeccapurple;
+    border-color:rebeccapurple;
 }
 .m-2{
     margin:4px;
+}
+.btn-how{
+    padding: 5px;
+    color: white;
+    font-size: 20px;
+    border-radius: 10px;
+    background-color: navy;
 }
 @media (min-width:576px){
     .container{
